--- a/projects.yaml
+++ b/projects.yaml
@@ -3183,6 +3183,17 @@ projects:
     tags:
       - dev
       - console
+  - name: gdbgui
+    repo_url: https://github.com/cs01/gdbgui
+    home_url: https://gdbgui.com/
+    pypi_url: https://pypi.org/project/gdbgui
+    date_added: 2019-09-30 19:24:00
+    desc: Browser-based frontend for [gdb](https://en.wikipedia.org/wiki/GNU_Debugger).
+    tags:
+      - dev
+      - linux
+      - windows
+      - mac
   - name: howdoi
     repo_url: https://github.com/gleitz/howdoi
     pypi_url: https://pypi.org/project/howdoi
