--- a/projects.yaml
+++ b/projects.yaml
@@ -850,6 +850,15 @@ projects:
       - linux
       - windows
       - gtk
+  - name: Pyfa
+    repo_url: https://github.com/pyfa-org/Pyfa
+    date_added: 2019-09-30 19:31:00
+    desc: Python Fitting Assistant, cross-platform experimentation tool for [EVE Online](https://en.wikipedia.org/wiki/Eve_Online) ship fittings.
+    tags:
+      - games
+      - linux
+      - windows
+      - mac
   - name: PySolFC  # solitaire games
     repo_url: https://github.com/shlomif/PySolFC
     home_url: https://pysolfc.sourceforge.io/
